# SimpleSDLDemo

./: .cproject  .project  CMakeLists.txt  Makefile  README.md
nbproject/: Package-Default.bash  configurations.xml  project.xml
src/: CMakeLists.txt  main.cpp
