PROJECT(SimpleSDLDemo)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set ( CMAKE_VERBOSE_MAKEFILE true )

ADD_SUBDIRECTORY(src)


SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -Wall -Werror -W -Wno-return-type" )
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -pipe -march=core2" )


IF(NOT CMAKE_BUILD_TYPE )
   SET( CMAKE_BUILD_TYPE "Debug" )
ENDIF()
